--- a/aj_jewellery/src/components/Navbar/Navbar.css
+++ b/aj_jewellery/src/components/Navbar/Navbar.css
@@ -33,6 +33,7 @@
 .navbar .links{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     font-weight: bold;
     font-size: large;
 }
