--- a/aj_jewellery/src/pages/CartPage/CartPage.css
+++ b/aj_jewellery/src/pages/CartPage/CartPage.css
@@ -2,3 +2,12 @@
     background-color:#d9eaec;
     margin-top: 3.8%;
 }
+
+
+.cartPage .empty h1{
+
+    height: 66vh;
+    font-size: xx-large;
+    text-align: center;
+    color:#ddcda6;
+}
