--- a/aj_jewellery/src/components/ChatBot/ChatBot.css
+++ b/aj_jewellery/src/components/ChatBot/ChatBot.css
@@ -1,9 +1,17 @@
+.time{
+    margin: 5px;
+    text-align: right;
+}
 .chatbot_left{
-    color: rgb(3, 94, 123);
+    color: rgb(19 79 40);
+    padding-left:10px;
     text-align: left;
+    width: 50%;
 }
 
 .chatbot_right{
-    color:  #505C7A;
+    color:  #61217c;
     text-align: right;
+    padding-left:48%;
+    width: 50%;
 }
